--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Business::Tax::Canada.
 
+0.02  Mon Feb 23 16:47:03 2004
+	- fixed Makefile.PL to not require 5.8.2
+
 0.01  Tue Feb 17 11:55:46 2004
 	- original version
 
